react-app/src/components/GamePage/GamePage.css
/* ... */
.keyboard-row {
	display: flex;
	justify-content: space-between;
	height: 100%;
	width: 100%;
	max-height: 58px;
}

.keyboard-key {
	border: none;
	background-color: var(--darker-gray);
	border-radius: 4px;
	color: black;
	height: 100%;
	width: 100%;
	max-width: 44px;
	font-size: 13.33px;
	font-weight: 700;
	cursor: pointer;
	font-family: "Clear Sans", "Helvetica Neue", Arial, sans-serif;
	display: flex;
	justify-content: center;
	align-items: center;
}

.keyboard-key.darkmode:not(.present, .absent, .correct) {
	color: white;
	background-color: var(--mid-gray);
}

.keyboard-key.action {
	max-width: 65px;
	display: flex;
	justify-content: center;
	align-items: center;
}

.present {
	color: white;
	background-color: var(--gold);
}
.absent {
	background-color: var(--darkest-gray);
	color: white;
}
.correct {
	background-color: var(--green);
	color: white;
}

.past {
	border: solid 2px var(--darkest-gray);
}

.active {
	border: solid 2px var(--darkest-gray);
	animation-name: pulse;
	animation-duration: 50ms;
}

.absent.darkmode {
	background-color: var(--dark-mode-grey);
}

.present.darkmode {
	background-color: var(--dark-gold);
}

.correct.darkmode {
	background-color: var(--dark-mode-green);
}

@keyframes pulse {
	0% {
		transform: scale(1);
	}

	50% {
		transform: scale(1.1);
	}
	100% {
		transform: scale(1);
	}
}

.fa-delete-left {
	font-size: 24px;
}

.keyboard-spacer {
	max-width: 16px;
	width: 100%;
}

.errors {
	position: absolute;
	width: 100vw;
	top: 66px;
	left: 0;
	z-index: 6;
}

/* Error */
.word-err {
	margin: auto;
	position: relative;
	font-family: "Franklin";
	font-weight: bold;
	margin-top: 5px;
	z-index: 2;
	font-size: 12px;
	width: fit-content;
	word-break: keep-all;
	white-space: pre;
	background-color: black;
	color: white;
	padding: 10px;
	border-radius: 4px;
	box-sizing: border-box;
}

/* Victory */
.victory-box {
	margin: auto;
	display: block;
	position: relative;
	font-family: "Franklin";
	font-weight: bold;
	margin-top: 5px;
	z-index: 2;
	font-size: 12px;
	width: fit-content;
	word-break: keep-all;
	white-space: pre;
	background-color: black;
	color: white;
	padding: 10px;
	border-radius: 4px;
	box-sizing: border-box;
	text-align: center;
	cursor: pointer;
	outline: none;
	border: none;
}

/* How to Play modal */

.how-to-overlay {
	position: absolute;
	width: 100%;
	height: 100vh;
	left: 0;
	display: flex;
	justify-content: center;
	align-items: center;
	background-color: rgba(255, 255, 255, 0.5);
	z-index: 5;
}

.how-to-overlay.darkmode {
	background-color: rgba(0, 0, 0, 0.5);
}

.how-to-modal {
	background-color: white;
	overflow-y: scroll;
	max-height: 90%;
	padding: 32px;
	box-shadow: 0 4px 23px 0 rgb(0 0 0 / 20%);
	border-radius: 8px;
	max-width: 90%;
	box-sizing: border-box;
	width: 560px;
	position: relative;
	align-self: center;
	justify-self: center;
	top: 100%;
	transition: top 0.3s ease-in-out;
}

.how-to-modal.show-help {
	top: 0%;
}

.how-to-modal.darkmode {
	background-color: var(--dark-mode-darkest);
	color: white;
}

.how-to-exit {
	position: absolute;
	right: 30px;
	top: 30px;
	outline: none;
	border: none;
	background-color: white;
	cursor: pointer;
	font-size: 20px;
}

.how-to-exit.darkmode {
	background-color: var(--dark-mode-darkest);
}

.fa-circle-question {
	cursor: pointer;
}

.how-to-exit.darkmode > i {
	color: white;
}

.how-to-title {
	font-family: nytkarnakcondensed;
	letter-spacing: 1px;
}

.how-to-subtitle {
	font-family: nytkarnak;
	font-size: 20px;
}

.how-to-list {
	font-family: "Franklin";
}
.how-to-list > li {
	font-size: 16px;
	list-style: initial;
	margin-bottom: 4px;
}

.how-to-weary,
.how-to-pills,
.how-to-vague {
	display: flex;
	gap: 5px;
}

.how-to-example > p {
	font-family: "Franklin";
}

.how-to-weary > div,
.how-to-pills > div,
.how-to-vague > div {
	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue",
		Helvetica, Arial, "Lucida Grande", sans-serif;
	border: solid 2px black;
	padding: 5px;
	box-sizing: border-box;
	width: 33px;
	height: 33px;
	display: flex;
	justify-content: center;
	align-items: center;
	font-weight: bold;
	font-size: 25.6px;
}

.how-to-weary.darkmode > div,
.how-to-pills.darkmode > div,
.how-to-vague.darkmode > div {
	border: solid 1px var(--dark-mode-grey);
}

.weary-green {
	background-color: var(--green);
	color: white;
	border: 0px;
	border: none !important;
	transition: transform 0.8s;
	transform-style: preserve-3d;
	transform: rotateX(-360deg);
}

.pills-gold {
	background-color: var(--gold);
	color: white;
	border: none !important;
}

.vague-grey {
	background-color: var(--mid-gray);
	color: white;
	border: none !important;
}

.how-to-line {
	border: solid 1px var(--light-border);
	margin: 20px 0px;
}

.how-to-created-by {
	font-family: "Franklin";
}

.strong-example {
	font-family: "Franklin";
	font-weight: bold;
	margin-bottom: 10px;
}

/* Victory modal */

.victory-overlay {
	position: absolute;
	top: 0px;
	width: 100vw;
	height: 100vh;
	left: 0;
	display: flex;
	justify-content: center;
	align-items: center;
	background-color: rgba(255, 255, 255, 0.5);
	z-index: 5;
}

.victory-overlay.darkmode {
	background-color: rgba(0, 0, 0, 0.5);
}

.victory-modal {
	background-color: white;
	overflow-y: scroll;
	max-height: 90%;
	padding: 32px;
	box-shadow: 0 4px 23px 0 rgb(0 0 0 / 20%);
	border-radius: 8px;
	max-width: 90%;
	box-sizing: border-box;
	width: 560px;
	position: relative;
	align-self: center;
	justify-self: center;
	top: 100%;
	transition: top 0.3s ease-in-out;
}
.victory-modal.darkmode {
	background-color: var(--dark-mode-darkest);
	color: white;
}

.victory-modal.show-victory {
	top: 0%;
}

.victory-title {
	font-size: 14px;
	font-family: "Clear Sans", "Helvetica Neue", Arial, sans-serif;
	text-align: center;
}

.victory-sub-title {
	font-size: 18px;
	text-align: center;
	font-family: "Franklin";
}

.victory-buttons {
	display: flex;
	align-items: center;
	justify-content: space-between;
}
/* ... */

